--- a/DiscountPrice.ipynb
+++ b/DiscountPrice.ipynb
@@ -23,7 +23,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\Nida Maryam\\\\Documents\\\\SummerAnalytics'"
+       "'C:\\\\....\\\\SummerAnalytics'"
       ]
      },
      "execution_count": 63,
